@@ -139,6 +139,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17182) Fix pretty printer so URLs with parentheses in them are
   autolinked correctly
 * (bug 17224) Added siprop=rightsinfo to meta=siteinfo
+* (bug 17239) Added prop=displaytitle to action=parse
 
 === Languages updated in 1.15 ===
 
